# vulkan

./: .clang-format  CMakeLists.txt  README.md  house.blend  imgui.ini  shader.cmake
01_window/: 01_window.cpp  CMakeLists.txt
02_triangle/: 02_triangle.cpp  CMakeLists.txt  triangle.vert
03_triangle_vertex/: 03_triangle_vertex.cpp  CMakeLists.txt  triangle_in.vert
04_cube/: 04_cube.cpp  04_cube_indexed.cpp  04_cube_vertices.inc  CMakeLists.txt
05_moving/: 05_moving.cpp  CMakeLists.txt  grid.cpp  grid.frag  grid.h
06_ubo/: 06_ubo.cpp  CMakeLists.txt  grid.vert  triangle_in.vert
07_texturing/: 07_texturing.cpp  CMakeLists.txt  grid.cpp  grid.frag  grid.vert
08_light/: 05_cube_vertices.inc  08_light.cpp  CMakeLists.txt  grid.cpp  grid.frag  grid.vert  triangle_in.frag
09_shadow/: 09_shadow.cpp  CMakeLists.txt  lightning_no.frag  lightning_pass.cpp  lightning_pass.h  lightning_shadowmap.frag  lightning_simple.frag  lightning_simple.vert  post_process.cpp  post_process.frag  post_process.h  post_process.vert  shadow_map.cpp  shadow_map.frag  shadow_map.vert
10_postprocess/: 10_postprocess.cpp  CMakeLists.txt  grid.cpp  grid.h  post_process.frag  shadow_map.h
11_msaa/: 05_cube_vertices.inc  11_msaa.cpp  CMakeLists.txt  lightning_pass.cpp  lightning_pass.h  lightning_shadowmap.frag  post_process.cpp  post_process.frag  post_process.h  post_process.vert  shader_tooling.cpp
beadando/: CMakeLists.txt  lightning_shadowmap.vert  mesh.cpp  project.cpp  reference.cpp  shader_tooling.h  shadow_map.cpp
lib/: CMakeLists.txt  buffer.cpp  debug.h  descriptors.cpp  descriptors.h
xx_binary/: CMakeLists.txt  to_resource.cpp
